--- a/views/home.pug
+++ b/views/home.pug
@@ -2,6 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to our website built with Node.js &amp; Express 
+  p Welcome to our website built with Node.js and implemented devops &amp; Express 
   p 
     a(href='/services') View our services
